--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ main {
   box-shadow: 0 0 15px #00ffec;
 }
 
-label, input, button {
+input, button {
   display: block;
   margin: 10px auto;
   font-size: 12px;
